[metadata]
name = utils-ptb
version = 0.0.1
author = ptbang
author_email = ptbang@gmail.com
description = A package with some utils
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ptbang/utils_ptb
project_urls =
    Bug Tracker = https://github.com/ptbang/utils_ptb/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src